syntax = "proto3";
package prc;
option go_package = "github.com/kercylan98/minotaur/engine/prc";

message ProcessId {
  string logical_address = 1;
  string physical_address = 2;
}
